hphp/test/quick/clsmethod-trait.php.expectf
Private in a

Fatal error: Call to private method a::priv from context t in %s on line 5
